# litestar-bookcreator

./: .gitignore  app_auth.py.sample  logger.py  main.py  meta_data.py  pyproject.toml  readme.md  sample.py  shared.py  test.sqlite
controller/: attribute_controller.py  meta_data_attribute_controller.py  meta_data_controller.py  meta_data_line_controller.py  meta_data_tag_controller.py
model/: base.py  meta_data.py  meta_data_attribute.py  meta_data_attribute_value.py  meta_data_line.py  meta_data_tag.py  meta_data_tag_value.py
templates/: base.html  hello.html.mako  sample.html.mako
